src/main/resources/Krakatau-master/tests/assembler/bad/badcircularcp2.j
.class public Nest
.super java/lang/Object

.const [1] = Class [r1]
.const [r1] = [r2]
.const [r2] = [r3]
.const [r3] = [r1]


.end class